[gd_scene load_steps=11 format=3 uid="uid://ctna87auxi1uf"]

[ext_resource type="Script" path="res://enemy-b.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cmhwoufj04xpi" path="res://tilemap.png" id="2"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("2")
region = Rect2(483, 161, 23, 23)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("2")
region = Rect2(460, 161, 23, 23)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("2")
region = Rect2(437, 161, 23, 23)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("2")
region = Rect2(483, 161, 23, 23)

[sub_resource type="SpriteFrames" id="5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}],
"loop": true,
"name": &"enemy_b_w",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(11.3018, 6.35756)

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(7.93822, 2.78376)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(12.7734, 6.14734)

[node name="enemy-b" type="CharacterBody2D" groups=["Damaj", "Eneml"]]
collision_layer = 0
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("5")
animation = &"enemy_b_w"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.315334, 5.88627)
shape = SubResource("6")

[node name="Area2D" type="Area2D" parent="." groups=["Eneml"]]
position = Vector2(-0.10511, -0.105112)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.210224, 1.36646)
shape = SubResource("7")

[node name="Area2D2" type="Area2D" parent="." groups=["Eneml"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-0.420448, 6.0965)
shape = SubResource("8")

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
